--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,36 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 /* STATIC FONTS */
 @font-face {
-     font-family: 'Inter';
-     src: url('/fonts/Inter.ttf') format('truetype');
+  font-family: "Inter";
+  src: url("/fonts/Inter.ttf") format("truetype");
 }
 
 @font-face {
-     font-family: 'Roboto';
-     src: url('/fonts/Roboto.ttf') format('truetype');
+  font-family: "Roboto";
+  src: url("/fonts/Roboto.ttf") format("truetype");
 }
 
 @font-face {
-     font-family: 'Manrope';
-     src: url('/fonts/Manrope.ttf') format('truetype');
+  font-family: "Manrope";
+  src: url("/fonts/Manrope.ttf") format("truetype");
 }
-
-
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-
 @theme {
+  --color-primary: #f7f7f7;
+  --color-secondary: #000000;
+  --color-accent: #eae4d5;
 
-     --color-primary: #F7F7F7;
-     --color-secondary: #000000;
-     --color-accent: #EAE4D5;
-
-     
-
-     --font-manrope: 'Manrope', sans-serif;
-     --font-roboto: 'Roboto', sans-serif;
-     --font-inter: 'Inter', sans-serif;
-
+  --font-manrope: "Manrope", sans-serif;
+  --font-roboto: "Roboto", sans-serif;
+  --font-inter: "Inter", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
 }
