--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,3 +51,10 @@
   scrollbar-width: thin;
   scrollbar-color: #d1d5db transparent;
 }
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
