--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,3 +58,11 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scroll-chain {
+  overscroll-behavior: contain;
+}
